# Some-project.

./: README.md
lol/: CMakeLists.txt
lol/profile-hub/: index.html
lol/src/: Bird.cpp  Bird.h  Game.cpp  Game.h  Leaderboard.cpp  Leaderboard.h  PipeManager.cpp  PipeManager.h
lol/web-version/: index.html  script.js  style.css
